k8s_learning/bakavets-way/004-lesson/kuber-app-clusterip.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
    app: http-server
  type: ClusterIP
  ports:
  - name: kuber-app-service
    protocol: TCP
    port: 80
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-v3
spec:
  selector:
    app: http-server-v3
  type: ClusterIP
  ports:
  - name: http-server-v3
    protocol: TCP
    port: 80
    targetPort: 8000
