k8s_learning/bakavets-way/004-lesson/kuber-app-externalname.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: kube-app-external
spec:
  selector:
    app: http-server
  type: ExternalName
  externalName: example.com
