k8s_learning/bakavets-way/004-lesson/kuber-app-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-app-lb
spec:
  selector:
    app: http-server
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  type: LoadBalancer
