k8s_learning/bakavets-way/004-lesson/kuber-app-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-app-nodeport
spec:
  selector:
    app: http-server
  ports:
  - port: 80
    protocol: TCP
    nodePort: 30080
    targetPort: 8000
  type: NodePort
