k8s_learning/bakavets-way/004-lesson/kuber-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
  labels:
    name: kuber-ingres-main
spec:
  rules:
  - host: app.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kuber-service
            port: 
              number: 80
  - host: app-v3.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kuber-service-v3
            port: 
              number: 80
